sfdc/myphotos/main/default/objects/Record__c/Record__c.object-meta.xml
<CustomObject>
    <description>Records for My Photos app</description>
    <label>Record</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>