sfdc/myphotos/main/default/objects/Record__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>Latitude and longitude</description>
    <inlineHelpText>Latitude and longitude</inlineHelpText>
    <label>Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>