sfdc/myphotos/main/default/objects/Record__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place</label>
    <referenceTo>Place__c</referenceTo>
    <relationshipLabel>Record</relationshipLabel>
    <relationshipName>Records</relationshipName>
    <type>Lookup</type>
</CustomField>