sfdc/myphotos/main/default/objects/Record__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp</description>
    <inlineHelpText>Timestamp</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>