sfdc/myphotos/main/default/objects/Record__c/recordTypes/Cafe.recordType-meta.xml
<RecordType>
    <fullName>Cafe</fullName>
    <active>true</active>
    <description>Cafe</description>
    <label>Cafe</label>
</RecordType>