sfdc/myphotos/main/default/objects/Record__c/recordTypes/Mall.recordType-meta.xml
<RecordType>
    <fullName>Mall</fullName>
    <active>true</active>
    <description>Mall</description>
    <label>Mall</label>
</RecordType>