sfdc/myphotos/main/default/objects/Record__c/recordTypes/Public_Transport.recordType-meta.xml
<RecordType>
    <fullName>Public_Transport</fullName>
    <active>true</active>
    <label>Public Transport</label>
</RecordType>