sfdc/myphotos/main/default/objects/Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <columns>Image__c</columns>
    <columns>Distance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>