sfdc/myphotos/main/default/objects/Record__c/listViews/Cafe.listView-meta.xml
<ListView>
    <fullName>Cafe</fullName>
    <columns>Timestamp__c</columns>
    <columns>NAME</columns>
    <columns>Memo__c</columns>
    <columns>Distance__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Record__c.Cafe</value>
    </filters>
    <label>Cafe</label>
</ListView>