sfdc/myphotos/main/default/objects/Record__c/listViews/SupermarketValid.listView-meta.xml
<ListView>
    <fullName>SupermarketValid</fullName>
    <columns>NAME</columns>
    <columns>Timestamp__c</columns>
    <columns>Memo__c</columns>
    <columns>Distance__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Record__c.Supermarket</value>
    </filters>
    <filters>
        <field>Valid__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SupermarketValid</label>
</ListView>